overall edited files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ db.driver=com.mysql.cj.jdbc.Driver
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#hibernate.allow_update_outside_transaction=true
-
+hibernate.allow_update_outside_transaction=true
+hibernate.enable_lazy_load_no_trans = true
 
 entitymanager.packagesToScan=com
